non-msrv-tests/tests/ui/wrong_option.stderr
error: `Debug` doesn't support custom options
 --> tests/ui/wrong_option.rs:1:30
  |
1 | #[derive_where::derive_where(Debug(option); T)]
  |                              ^^^^^^^^^^^^^
